update customer for ticket JFADM-5

--- a/app/views/partials/_customer_info_table.html.erb
+++ b/app/views/partials/_customer_info_table.html.erb
@@ -1,64 +1,45 @@
-
-
 <!--table responsive and  scrolls horizontally-->
 
-<div class="table-responsive"  id="customer-info" >
+<div class="table-responsive" id="customer-info">
   <div class="container">
     <h2>List of all Customer</h2>
     <table class="table table-hover">
       <thead>
       <tr>
         <th>#</th>
-        <th>First Name</th>
-        <th>Last Name </th>
-        <th>DOB</th>
-        <th>Country</th>
-        <th>#</th>
-        <th>#</th>
-        <th>#</th>
+        <th>User ID</th>
+        <th>Profile ID</th>
+        <th>Email</th>
+        <th>Last Name</th>
+        <th>Date of Birth</th>
+        <th>Country of residence</th>
+        <th></th>
+        <th></th>
       </tr>
       </thead>
+      <% @customers.each do |c| %>
+          <tr>
+            <td><%#= c.inspect %></td>
+            <td><%= c.id %></td>
+            <td><%= c.profile.id %></td>
+            <td><%= c.login %></td>
+            <td><%= c.profile.first_name %></td>
+            <td><%= c.profile.last_name %></td>
+            <td><%= c.profile.date_of_birth %></td>
+            <td><%= c.profile.country_of_residence %></td>
+            <td><%= c.profile.url %></td>
+            <td><%= link_to "Show", role_customer_path(c.id) %></td>
+            <td><%= link_to "Edit", edit_role_customer_path(c.id) %></td>
+            <td><%= link_to "Remove", role_customer_path(c.id), method: :delete, data: {confirm: "Are you sure?"} %></td>
+          </tr>
+          <tr >
+            <!--<td colspan="4">-->
+              <!--<%#= c.profile.inspect %>-->
+            <!--</td>-->
 
-      <!--<%# profiles.each do |profile| %>-->
-          <!--<tr>-->
-            <!--<td><%#= profile[:first_name] %></td>-->
-            <!--<td><%#= profile[:last_name]%></td>-->
-            <!--<td><%#= profile[:date_of_birth] %></td>-->
-            <!--<td><%#= profile[:country_of_birth] %></td>-->
-            <!--<td><%#= link_to "Show", profile %></td>-->
-            <!--<td><%#= link_to "Edit", edit_customer_path(profile) %></td>-->
-            <!--<td><%#= link_to "Remove", profile, method: :delete, data: { confirm: "Are you sure?" } %></td>-->
-          <!--</tr>-->
-      <!--<%# end %>-->
-      <tr>
 
-
-
-
-      <% @profiles.each do |key, value| %>
-          <td><%=  "#{value}" %></td>
-
+          </tr>
       <% end %>
-        <td><%= link_to "Show", role_customer_path(@profiles[:id]) %></td>
-        <td><%= link_to "Edit", edit_role_customer_path(@profiles[:id]) %></td>
-        <td><%= link_to "Remove", role_customer_path(@profiles[:id]), method: :delete, data: { confirm: "Are you sure?" } %></td>
-
-      </tr>
-      <%# end %>
-      <!--</tr>-->
-      <!--<tr>-->
-        <!--<td></td>-->
-        <!--<td>Anna</td>-->
-        <!--<td><%#= @profile[:first_name] %></td>-->
-        <!--<td><%#= @profile[:last_name] %></td>-->
-        <!--<td><%#= @profile[:date_of_birth] %></td>-->
-        <!--<td><%#= @profile[:country_of_residence] %></td>-->
-        <!--<td><%#= link_to 'Show', role_customer %></td>-->
-        <!--<td><%#= link_to 'Edit', edit_role_customer_path(current_user)  %></td>-->
-
-
-        <%#end%>
-      <!--</tbody>-->
     </table>
   </div>
 </div>
