--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title, "Reset Password") %>
 
 <h1>Enter Your Password Information </h1>
-<%= form_tag(password_reset_path(params[:id]), method:"post", action: "update" ) do %>
+<%= form_tag password_reset_path(params[:id]), method:"put"  do %>
 
-    <fieldset>
+        <fieldset>
       <div>
         <%= label_tag :password %>
         <%= text_field_tag :password, params[:password], :placeholder => "Password" %>
