Show invoice item for ticket- JFADM-9

--- a/app/views/invoices/_invoice_info_table.html.erb
+++ b/app/views/invoices/_invoice_info_table.html.erb
@@ -15,6 +15,7 @@
         <th>User</th>
         <th>Vat(%)</th>
         <th>Total Amount</th>
+        <th> Currency</th>
         <th>Tenant_id</th>
         <th>Url</th>
         <th></th>
@@ -35,6 +36,7 @@
                 <td><%= i.user_id %></td>
                 <td><%= i.vat %></td>
                 <td><%= i.total_amount %></td>
+                <td><%= i.currency %></td>
                 <td><%= i.tenant_id %></td>
                 <td><%= i.url %></td>
 
