--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,7 +6,7 @@
 <!--<%# end %>-->
 
 <!--</ul>-->
-<h1>Details of order: <%= @order[:id] %></h1>
+<h1>Details of order: <%= @order.id %></h1>
 
 <p>
   <strong>Order id: </strong> <%=  @order[:id] %><br />
