--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,26 +1,3 @@
-<!--<div class="clearfix hidden-lg hidden-md "></div>-->
-<div class="col-xs-6 col-lg-2 col-sm-6 col-md-2">
-  <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-
-    <ul>
-      <%# if signed_in %>
-          <li><%= link_to "List of Orders" %></li>
-          <li><a href=""> Edit Orders</a></li>
-          <li><a href=""></a></li>
-          </ul>
-          </div>
-
-      <%# end %>
-
-
-      </div>
-
-
-</div>
-</div>
-<div>
-  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
-</div>
 
 <%= render 'list_order' %>
+<%= link_to 'New Order', new_order_path %>
