--- a/app/views/country_managements/index.html.erb
+++ b/app/views/country_managements/index.html.erb
@@ -1,8 +1,4 @@
-<!--<div class="clearfix hidden-lg hidden-md "></div>-->
-<a class="sidenav-toggle-btn">
-  <span  style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
-</a>
 
-<%= render 'country_side_nav' %>
 <%= render 'countries_info_table' %>
 
+<%= link_to 'New Country', new_country_management_path %>
